Formulario Novedades Bibliográficas

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,3 +8,18 @@
     color: red;
     margin-right: 0.5em;
 }
+
+.wysiwyg-wrapper-class {
+    padding: 1rem;
+    border: 1px solid #ccc;
+}
+.wysiwyg-editor-class {
+    --tw-bg-opacity: 1;
+    background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+    padding: 1rem;
+    border: 1px solid #ccc;
+}
+.wysiwyg-toolbar-class {
+    border: 1px solid #ccc;
+}
+  
